# luxonis-train

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  OPTIMIZATION_PLANNER_SPEC.md  README.md  pyproject.toml  requirements-aimet.txt  requirements-config.txt  requirements-dev.txt  requirements.txt  test_models.py
.github/: labeler.yaml
.github/workflows/: actions_autoupdate.yaml  add-metadata.yaml  ci.yaml  python-publish.yaml  semgrep.yaml  tests.yaml  update-cov-report.yaml
configs/: README.md  anomaly_detection_model.yaml  classification_heavy_model.yaml  classification_light_model.yaml  classification_model.yaml  coco_model.yaml  coco_multitask_model.yaml  complex_model.yaml  ddrnet_segmentation_model.yaml  defaults.yaml  detection_fomo_heavy_model.yaml  detection_fomo_light_model.yaml  detection_heavy_model.yaml  detection_light_model.yaml  detection_model.yaml  dinov3_classification_classic_head.yaml  dinov3_classification_transformer_head.yaml  dinov3_semantic_segmentation.yaml  dinov3_semantic_segmentation_transformer_head.yaml  efficient_coco_model.yaml  embeddings_model.yaml  example_export.yaml  example_multi_input.yaml  example_tuning.yaml  fomo_heavy_model.yaml  fomo_light_model.yaml  instance_segmentation_heavy_model.yaml  instance_segmentation_light_model.yaml  keypoint_bbox_heavy_model.yaml  keypoint_bbox_light_model.yaml  keypoint_bbox_model.yaml  obb_detection_model.yaml  ocr_decoding.yaml  ocr_recognition_light_model.yaml  ocr_recognition_model.yaml  resnet_model.yaml  resnet_multitask_model.yaml  segmentation_heavy_model.yaml  segmentation_light_model.yaml  segmentation_model.yaml
docs/: google_docstring_migration_spec.md
examples/: README.md
luxonis_train/: __init__.py  __main__.py  enums.py  registry.py  tasks.py  typing.py  upgrade.py  variants.py
luxonis_train/assigners/: __init__.py  atss_assigner.py  atts_assigner.py  tal_assigner.py  utils.py
luxonis_train/attached_modules/: README.md  base_attached_module.py
luxonis_train/attached_modules/losses/: README.md  __init__.py  adaptive_detection_loss.py  adaptive_detection_loss_weighted.py  base_loss.py  bce_with_logits.py  cross_entropy.py  ctc_loss.py  efficient_keypoint_bbox_loss.py  ohem_loss.py  (+18 more)
luxonis_train/callbacks/: README.md  __init__.py  aimet_callback.py  archive_on_train_end.py  batch_size_finder.py  convert_on_train_end.py  ema.py  export_on_train_end.py  fail_on_no_train_batches.py  gpu_stats_monitor.py  graceful_interrupt.py  gradcam_visializer.py  gradcam_visualizer.py  luxonis_model_summary.py  luxonis_progress_bar.py  metadata_logger.py  module_freezer.py  needs_checkpoint.py  rich_model_summary.py  test_on_train_end.py  training_manager.py  training_progress_callback.py  upload_checkpoint.py  upload_checkpoint_on_train_end.py
luxonis_train/config/: __init__.py  config.py  constants.py  migrate.py
luxonis_train/core/: __init__.py  archiver.py  core.py  exporter.py  inferer.py  trainer.py  tuner.py
luxonis_train/datasets/: __init__.py  base_torch_dataset.py  luxonis_torch_dataset.py  perlin_noise_dataset.py
luxonis_train/lightning/: luxonis_lightning.py  luxonis_output.py  optimization_planner.py  utils.py
luxonis_train/loaders/: README.md  __init__.py  base_loader.py  debug_loader.py  dummy_loader.py  luxonis_loader_torch.py  luxonis_perlin_loader_torch.py  obb_tmp_loader.py  perlin.py  utils.py
luxonis_train/models/: __init__.py  luxonis_lightning.py  luxonis_model.py  luxonis_output.py
luxonis_train/nodes/: README.md  __init__.py  base_node.py  bisenet_head.py  classification_head.py  contextspatial.py  efficient_bbox_head.py  efficient_keypoint_bbox_head.py  efficientnet.py  efficientrep.py  implicit_keypoint_bbox_head.py  micronet.py  mobilenetv2.py  mobileone.py  ocr_decoder.py  repvgg.py  resnet.py  rexnetv1.py  segmentation_head.py
luxonis_train/optimizers/: custom_optimizers.py  optimizers.py
luxonis_train/schedulers/: custom_schedulers.py  schedulers.py
luxonis_train/strategies/: README.md  __init__.py  base_strategy.py  triple_lr_sgd.py
luxonis_train/utils/: __init__.py  annotation.py  boundingbox.py  boxutils.py  checkpoint.py  config.py  dataset_metadata.py  exceptions.py  general.py  graph.py  keypoints.py  logging.py  ocr.py  registry.py  segmentation.py  spatial_transforms.py  tracker.py  types.py  variants.py
media/: anomaly_detection_diagram.drawio  luxonis_train_diagram.drawio
scripts/: build_luxonis_ml_intersphinx.py  check_doc_schema.py
tests/: conftest.py
tests/configs/: archive_config.yaml  cli_commands.yaml  config_simple.yaml  ddrnet.yaml  mobilenetv3.yaml  multi_input.yaml  parking_lot.json  parking_lot_config.yaml  reid.yaml  segmentation_parse_loader.yaml  smart_cfg_populate_config.yaml
tests/files/: custom_archive_config.json  execution_order.json
tests/fixtures/: adaptive_detection_loss_data.pt  fomo_localization_loss_data.pt
tests/integration/: backbone_model_utils.py  conftest.py  download_weights.py  multi_input_modules.py  parking_lot.json  test_bump_opset_version.py  test_callbacks.py  test_cli.py  test_cli_commands.py  test_combinations.py  test_convert.py  test_core.py  test_custom_model.py  test_custom_tasks.py  test_detection.py  test_embeddings.py  test_export_input_output_identifiers.py  test_export_unique_identifiers.py  test_finetuning.py  test_fixed_validation_batch_limit.py  test_fomo_detection.py  test_freezing.py  test_loader.py  test_mlflow_logging.py  test_model_config.py  test_multi_input.py  test_multi_model.py  test_overfit_batches.py  test_overfit_convergence.py  test_predefined_models.py  test_progress_bar.py  test_reid.py  test_remove_on_export.py  test_resume_training.py  test_sanity.py  test_scheduler.py  test_segmentation.py  test_simple.py  test_smart_logging.py  test_splits.py  (+1 more)
tests/unittests/: test_base_attached_module.py  test_base_node.py  test_blocks.py  test_config.py  test_export_utils.py  test_lightning_utils.py  test_optimization_planner.py  test_variants.py
tools/: Dockerfile  docker-compose.yaml  generate_execution_order.py  migrate.sh  migrate_weights.py  run.sh
(+244 files in other folders)
